<resources>
    <string name="app_name">Sulteng Covid</string>
    <string name="_0">0</string>
    <string name="positive">Positive</string>
    <string name="positive_bs">Positive: %s</string>
    <string name="recovered">Recovered</string>
    <string name="death">Death</string>
    <string name="death_bs">Death: %s</string>
    <string name="odp">ODP: %s</string>
    <string name="pdp">PDP: %s</string>
    <string name="about">About</string>
    <string name="district">District</string>
    <string name="hospital">Hospital</string>
    <string name="negative">Negative</string>
    <string name="negative_bs">Negative: %s</string>
    <string name="detail">Detail</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="mohammad_husni_mubaraq">Mohammad Husni Mubaraq</string>
    <string name="api">API</string>
    <string name="banua_coders">Banua Coders</string>
    <string name="find_me">Find Me (Click Down Below) :</string>
    <string name="github">Github</string>
    <string name="email">Email</string>
    <string name="tvOpening">Made With\u2661For Human</string>
    <string name="loading">Loading…</string>
    <string name="call">Call</string>
    <string name="share">Share This App</string>
    <string name="share_text">Covid-19 Outbreak Info in Central Celebes, get App Here https://github.com/whoishusni/SultengCovid/releases</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Are You Sure Want To Exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prevention">Prevention</string>
    <string name="do_5_things">Do 5 Things</string>
    <string name="to_stop_corona_virus">To Stop Corona Virus</string>
    <string name="wash_your_hands_more_often">1. Wash Your Hands More Often</string>
    <string name="use_your_elbow_to_cover_mouth_when_coughing">2. Use Your Elbow To Cover Mouth When Coughing</string>
    <string name="_3_don_t_touch_your_face">3. Don\'t Touch Your Face</string>
    <string name="_4_keep_a_safe_distance">4. Keep a Safe Distance</string>
    <string name="_5_better_at_home">5. Better at Home</string>
    <string name="news_api">NewsApi</string>
    <string name="news">News</string>
    <string name="message">Message</string>
    <string name="setting">Setting</string>
    <string name="daily_notif_key">daily_notif_key</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="daily_update_about">Daily Update About Covid-19 at 08:00</string>
    <string name="daily_notif_setup">Daily Notification Is Setup</string>
    <string name="daily_notif_cancel">Daily Notification is Cancelled</string>
    <string name="update_widget">Update Widget Data</string>
    <string name="message_notif">Positive : %s , Recovered : %s, Deaths : %s</string>

</resources>
