<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="14dp">


    <TextView
        android:id="@+id/tvWidgetProvinceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="14dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvWidgetProvincePositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableTop="@drawable/ic_trending_up"
            android:textColor="@android:color/black"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/tvWidgetProvinceRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableTop="@drawable/ic_trending_down"
            android:textColor="@android:color/black"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/tvWidgetProvinceDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableTop="@drawable/ic_dead"
            android:textColor="@android:color/black"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_trending_up_mini"
            android:text="@string/positive"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_trending_down_mini"
            android:text="@string/recovered"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_dead_mini"
            android:text="@string/death"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdateWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_widget_update_button"
        android:text="@string/update_widget" />


</LinearLayout>